--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Μια σταγώνα, μια ζωή</title>
   </head>
   <body>
+    <noscript>This website requires JavaScript to function. / Αυτη η εφαρμογή απαιτεί JavaScript για να λειτουργήσει.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <div id="transition-area">
-    <button class="blueButton" id='translation-toggle'></button>
+    <button class="blueButton" id='translation-toggle' style="display:none"></button>
     <div id='google_translate_element'></div>
   </div>
       <script>
