--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/60ebf8a7ca.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="/logo.ico" />
+    <meta name="Μια σταγώνα, μια ζωή" content=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Μια σταγώνα, μια ζωή</title>
   </head>
